<resources>
    <string name="app_name">BusBooking</string>
    <string name="Bus_Booking">BUS-BOOKING</string>
    <string name="Speech1">Encuentre su viaje a solo un clic de distancia</string>
    <string name="Speech2">Una forma sencilla de reservar su vuelo en cualquier momento y en cualquier lugar con solo su teléfono</string>
    <string name="getstarted">Empezar</string>
    <string name="Account">¿Ya tienes una cuenta? </string>
    <string name="Log_in">Acceder</string>
    <string name="One_Way">Solo ida</string>
    <string name="Round_Trip">Ida y vuelta</string>
    <string name="Search_trip">Buscar viaje</string>
    <string name="Recent_activity">Actividad reciente</string>
    <string name="View_all">Ver todo</string>
    <string name="Home">Inicio</string>
    <string name="Tickets">Boletos</string>
    <string name="Notifications">Notificaciones</string>
    <string name="Profile">Perfil</string>
    <string name="Hello">Hola </string>
    <string name="WAYG">¿A dónde vas?</string>
</resources>