<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bus_Booking"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bus"
        android:contentDescription="@null"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Speech1"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="30dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Speech2"
        android:textColor="#5C5C5C"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getstarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getstarted"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Account"
            android:textColor="#5C5C5C"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:gravity="center"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Log_in"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>
</LinearLayout>